trunk/Archive2/45/e54d395596962b/output
main.cpp: In function 'int main()':
main.cpp:61:5: error: static assertion failed: Fuck this shit.
     static_assert( std::is_pod<RVector<float, 3>>::value, "Fuck this shit." );
     ^
main.cpp:62:5: error: static assertion failed: Fuck this shit.
     static_assert( std::is_standard_layout<RVector<float, 3>>::value, "Fuck this shit." );
     ^
main.cpp:66:5: error: static assertion failed: Well, fuck!
     static_assert( std::is_pod<detail::vector_members<float, make_indices<3>::type>>::value, "Well, fuck!" );
     ^
